# ns-rs

./: .env.sample  .gitignore  Cargo.toml  Makefile  README.md  indexer.Dockerfile  sample.env
.github/workflows/: build.yml  ci.yml
crates/internal/axum-web/: Cargo.toml
crates/internal/axum-web/src/: erring.rs  lib.rs  object.rs
crates/internal/scylla-orm/: Cargo.toml
crates/internal/scylla-orm-macros/: Cargo.toml
crates/internal/scylla-orm-macros/src/: cql_orm.rs  lib.rs
crates/internal/scylla-orm/src/: columns.rs  lib.rs
crates/ns-axum-web/: Cargo.toml
crates/ns-axum-web/src/: encoding.rs
crates/ns-fetcher/: Cargo.toml  README.md
crates/ns-fetcher/src/: fetcher.rs  indexer.rs  lib.rs
crates/ns-indexer/: Cargo.toml  README.md  sample.env
crates/ns-indexer/cql/: keyspace.cql  keyspace_prod.cql  schema.cql
crates/ns-indexer/doc/: ns-indexer-api-insomnia-v1.yaml
crates/ns-indexer/src/: bitcoin.rs  envelope.rs  indexer.rs  indexer_api.rs  lib.rs  router.rs  scanner.rs  utxo.rs
crates/ns-indexer/src/api/: inscription.rs  mod.rs  name.rs  service.rs  utxo.rs
crates/ns-indexer/src/db/: mod.rs  model_inscription.rs  model_name_state.rs  model_service_protocol.rs  model_service_state.rs  model_utxo.rs  scylladb.rs
crates/ns-inscriber/: Cargo.toml  README.md  sample.env
crates/ns-inscriber/src/: bitcoin.rs  inscriber.rs  lib.rs
crates/ns-inscriber/src/wallet/: cose_key.rs  ed25519.rs  encrypt.rs  mod.rs  secp256k1.rs  sign.rs
crates/ns-protocol/: Cargo.toml  README.md
crates/ns-protocol/src/: ed25519.rs  index.rs  lib.rs  ns.rs  state.rs
crates/ns-scylla-orm/: Cargo.toml
crates/ns-scylla-orm-macros/: Cargo.toml
crates/ns-scylla-orm-macros/src/: cql_orm.rs
crates/ns-scylla-orm/src/: cql_value.rs
src/: lib.rs
