[package]
name = "ns-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
description = "Name & Service Protocol implementations in Rust"
publish = false
repository = "https://github.com/ldclabs/ns-rs"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
base64 = "0.21"
ciborium = "0.2"
ciborium-io = "0.2"
ed25519-dalek = "2"
futures = "0.3"
libflate = "1"
log = "0.4"
mime = "0.3"
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
structured-logger = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
faster-hex = "0.8"
hex-literal = "0.4"

[profile.release]
lto = true
