[package]
name = "ns-axum-web"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
description = "axum web middlewares for ns-rs"
publish = true
repository = "https://github.com/ldclabs/ns-rs/tree/main/crates/ns-axum-web"
license = "CC0-1.0"

[lib]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
libflate = { workspace = true }
log = { workspace = true }
mime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
structured-logger = { workspace = true }
tokio = { workspace = true }
scylla = "0.11"
zstd = "0.12"
validator = { version = "0.16", features = ["derive"] }
