[package]
name = "ns-indexer"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
description = "Name & Service Protocol indexer service in Rust"
publish = false
repository = "https://github.com/ldclabs/ns-rs/crates/ns-indexer"
license = "CC0-1.0"

[lib]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
serde = { workspace = true }
