[package]
name = "ns-indexer"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
description = "Name & Service Protocol indexer service in Rust"
publish = false
repository = "https://github.com/ldclabs/ns-rs/crates/ns-indexer"
license = "CC0-1.0"

[lib]

[[bin]]
name = "ns-indexer"
path = "src/bin/main.rs"

[dependencies]
ns-protocol = { path = "../ns-protocol" }
axum-web = { path = "../internal/axum-web" }
scylla-orm = { path = "../internal/scylla-orm" }
scylla-orm-macros = { path = "../internal/scylla-orm-macros" }
anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
structured-logger = { workspace = true }
futures = "0.3"
reqwest = { version = "0.11", features = [
  "rustls-tls",
  "rustls-tls-webpki-roots",
  "json",
  "gzip",
  "trust-dns",
], default-features = false }
bitcoin = { version = "0.31", features = ["serde", "base64", "rand"] }
dotenvy = "0.15"
hex = "0.4"
bitcoincore-rpc-json = "0.18.0"
scylla = "0.10"
tower = "0.4"
tower-http = { version = "0.5", features = [
  "catch-panic",
  "compression-gzip",
  "compression-zstd",
  "decompression-gzip",
  "decompression-zstd",
  "propagate-header",
] }
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
hex-literal = "0.4"
