[package]
name = "ns-inscriber"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
description = "Name & Service Protocol inscriber service in Rust"
publish = false
repository = "https://github.com/ldclabs/ns-rs/crates/ns-inscriber"
license = "CC0-1.0"

[lib]

[[bin]]
name = "ns-inscriber"
path = "src/bin/main.rs"

[dependencies]
ns-protocol = { path = "../ns-protocol" }
ns-indexer = { path = "../ns-indexer" }
anyhow = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
structured-logger = { workspace = true }
futures = "0.3"
reqwest = { version = "0.11", features = [
  "rustls-tls",
  "rustls-tls-webpki-roots",
  "json",
  "gzip",
  "trust-dns",
], default-features = false }
bitcoin = { version = "0.31", features = ["serde", "base64", "rand"] }
dotenvy = "0.15"
bitcoincore-rpc-json = "0.18.0"

[dev-dependencies]
hex-literal = "0.4"
