[package]
name = "ns-inscriber"
version = "0.2.0"
edition = "2021"
rust-version = "1.64"
description = "Name & Service Protocol inscriber service in Rust"
publish = true
repository = "https://github.com/ldclabs/ns-rs/tree/main/crates/ns-inscriber"
license = "CC0-1.0"

[lib]

[[bin]]
name = "ns-inscriber"
path = "src/bin/main.rs"

[dependencies]
ns-protocol = { path = "../ns-protocol", version = "0.5" }
ns-indexer = { path = "../ns-indexer", version = "0.2" }
anyhow = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
structured-logger = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.11", features = [
  "rustls-tls",
  "rustls-tls-webpki-roots",
  "json",
  "gzip",
  "trust-dns",
], default-features = false }
bitcoin = { version = "0.31", features = ["serde", "base64", "rand"] }
dotenvy = "0.15"
bitcoincore-rpc-json = "0.18.0"
clap = { version = "=4.4.11", features = ["derive"] }
terminal-prompt = { version = "=0.2.3" }
coset = { version = "0.3" }
sys-locale = "0.3"
aes-gcm = "0.10"
rand_core = { version = "0.6", features = ["getrandom", "alloc"] }
chrono = { version = "0.4" }
sha3 = "0.10"
hex = "0.4"
slip10_ed25519 = "0.1.3"

[dev-dependencies]
hex-literal = "0.4"
