[package]
name = "ns-protocol"
version = "0.4.0"
edition = "2021"
rust-version = "1.64"
description = "Name & Service Protocol in Rust"
publish = true
repository = "https://github.com/ldclabs/ns-rs/tree/main/crates/ns-protocol"
license = "CC0-1.0"

[lib]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
finl_unicode = "1.2.0"
sha3 = "0.10"

[dev-dependencies]
hex = "0.4"
hex-literal = "0.4"
rand_core = { version = "0.6", features = ["getrandom", "alloc"] }
