[package]
name = "ns-scylla-orm"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
description = "scylla orm for ns-rs"
publish = true
repository = "https://github.com/ldclabs/ns-rs/tree/main/crates/ns-scylla-orm"
license = "CC0-1.0"

[lib]

[dependencies]
anyhow = { workspace = true }
scylla = "0.11"

[dev-dependencies]
ciborium = { workspace = true }
serde = { workspace = true }
